# bibika

./: .clang-format  CMakeLists.txt  README.md
android/: .clang-format  AndroidManifest.xml  build.gradle
android/jni/: NotificationHelper.cpp  NotificationHelper.h
android/res/values/: strings.xml
android/res/values-ru/: strings.xml
android/src/org/qtproject/bibika/: NotificationHelper.kt
lang/: BibikaService_en.ts  BibikaService_ru.ts
qml/: AppSettings.qml  DemoDatabase.qml  Main.qml  WorkingComponent.qml
qml/components/: AcceptButton.qml  MileageTextField.qml  RoundButton.qml  SmartTextField.qml
qml/dialogs/: UpdateMilestoneDialog.qml
qml/screens/: DashboardScreen.qml  EditServiceRecordScreen.qml  ServiceRecordScreen.qml  SettingsScreen.qml  WelcomeScreen.qml  tt.qml
qml/style/: Style.qml
res/: cars.json  qtquickcontrols2.conf  res.qrc
src/: main.cpp
src/models/: CarInfo.cpp  CarInfo.h  CarInfoBuilder.cpp  CarInfoBuilder.h  ServiceRecord.cpp  ServiceRecord.h  ServiceRecordBuilder.cpp  ServiceRecordBuilder.h  ServiceRecordListModel.cpp  ServiceRecordListModel.h  ServiceRecordModel.cpp  ServiceRecordModel.h  ServiceRecordProxy.cpp  ServiceRecordProxy.h  ServiceRecordRepository.cpp  ServiceRecordRepository.h
src/service/: CarModelIndex.cpp  CarModelIndex.h
tests/: CMakeLists.txt  TestCarInfo.cpp  TestCarInfo.h  TestCarInfoBuilder.cpp  TestCarInfoBuilder.h  TestServiceRecord.cpp  TestServiceRecord.h  TestServiceRecordModel.cpp  TestServiceRecordModel.h  main.cpp
